From dade112 (pyuvdata):
=======================

In prisim/interferometry.py,

(*) In member function save() of class InterferometerArray, fix bug
in writing the correct attribute for projected_baselines, wherein
earlier it only wrote baselines attribute wrongly in place of the
projected_baselines attribute

In scripts/make_redundant_visibilities.py,

(*) Insert a comment that can temporarily fix the bug that was saving
incorrect projected_baselines (see above), which will be a
placeholder until all simulations have got this bug fixed in them

From d9ddcd8 (pyuvdata):
=======================

In scripts/make_redundant_visibilities.py,

(*) Update to save redundant visibilities in UVFITS format
(*) Start work on saving redundant visibilities in uvh5 format

From e64b513 (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) In member function FT() of class ClosurePhaseDelaySpectrum, add
ability to handle if the reference visibility is provided only at a
single LST, in which case this scaling applies to all the LST 

From d6090ea (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) Import primary_beams module
(*) In member function beam3Dvol() of class ClosurePhaseDelaySpectrum,
fix bug in computation of analytic power pattern

In prisim/primary_beams.py,

(*) In function primary_beam_generator(), pass telecope orientation
as a numpy array in call to function airy_disk_pattern()

From 892760b (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) In member function smooth_in_tbins() of class ClosurePhase, add
ability to handle when LST binning is not requested or if there is
only one LST.
(*) In member function subsample_differencing() of class ClosurePhase, 
add ability to handle when LST binning is not requested or if there is
only one LST.

From 6d211aa (noise):
====================

In examples/simparms/replicatesim.yaml,

(*) Add input parameters eff_aprtr and eff_Q